# test-web-api

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yaml
migrations/2023-09-22-133840_posts/: up.sql
migrations/2023-09-25-171125_authors/: down.sql  up.sql
src/: database.rs  main.rs  schema.rs
src/dto/: author.rs  mod.rs  post.rs  shared.rs
src/enums/: errors.rs
src/models/: author.rs  mod.rs  post.rs
src/routes/: posts.rs
